# Netmiko-mcp

./: .env.example  .gitignore  Dockerfile  README.md  asyncio_testing.py  main.py  mcp_cisco_server.py  mcp_server.py  pyproject.toml  requirements.txt  run_agent.py
agent_client/: agent.py  agent_connector.py  cisco_agent.py
agent_local/: llm_ollama.py
config/: devices_config.py
core/: agent_controller.py  executor.py  graph.py  plan_generator.py  state.py
logger/: print_log.py
utils/: logger.py
