[project]
name = "mcp-network-automate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.1.0",
    "langchain-mistralai>=0.2.10",
    "langgraph>=0.0.20",
    "mcp[cli]>=1.6.0",
    "netmiko>=4.2.0",
    "openai>=1.6.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]
